# recastnavigation-jni

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  make_linux64.sh  make_osx.sh  make_win64.bat
cpp/: Main.cpp  Navi.cpp  Navi.h  NaviExport.cpp  Util.cpp  Util.h
java/: buildNavi.sh  runNavi.sh
java/com/test/: Main.java
java/org/navi/: Navi.java
